# hand-isomorphism-to-file

./: .gitignore  .gitmodules  Cargo.toml  README.md
src/: encode.rs  main.rs
