[package]
name = "hand-isomorphism-to-file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
hand-isomorphism-rust = { path = "./libs/hand-isomorphism-rust" }
serde = { version = "1.0.197", features = ["derive"] }
